# python-project-49

./: README.md  pyproject.toml
brain_games/: brain_game_l.py  game_launcher.py
brain_games/games/: brain_calc.py  brain_calc_l.py  brain_even.py  brain_even_l.py  brain_gcd.py  brain_gcd_l.py  brain_prime.py  brain_prime_l.py  brain_progression.py  brain_progression_l.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
brain_games_d/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
